"Added Frontend Feature template && updt Readme "

--- a/task-management-system/django_backend/api/templates/api/index.html
+++ b/task-management-system/django_backend/api/templates/api/index.html
@@ -3,6 +3,6 @@
 {% block content %}
 <h1 class=".title">Bienvenido a la pagina Test de Sherpa !</h1>
 <p class=".description">Esta es una pagina de prueba para el sistema de gestion de tareas de Sherpa</p>
-<a href="{% url 'api:auth-login' %}">Login</a>
-<a href="{% url 'api:user-register' %}">Registro</a>
+<a href="{% url 'auth-login' %}">Login</a>
+<a href="{% url 'user-register' %}">Registro</a>
 {% endblock %}
